
2017-02-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* HACKING: added info how to prepare a distribution
	* Makefile.am: don't touch any generated files, see HACKING
	* Makefile.am: chmod for all files to 644,
	  executable scripts and directories get 755

2017-02-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* HACKING, README: moved instructions for development/svn-builds
	  from README to new file HACKING and added missing information

2016-11-17  Ron Norman <rjn@inglenet.com>

	* configure.ac: check for sys/wait.h (for CBL_GC_WAITPID)

2016-05-04  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* general: removed project files and references to Visual C < 2005
	  (GC 2+ will not build with these versions) including define of
	  COB_USE_VC2005_OR_GREATER

2016-01-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* configure.ac: removed AC_FUNC_ALLOCA

2016-01-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* Makefile.am: added targets "test" (running ANSI testsuite) and
	  "checkall" (running both GnuCOBOL and ANSI testsuite), both do a
	  full build of GnuCOBOL if necessary

2015-12-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Taken into account all copyright assignments and rechecking the dates
	* Changed name spelling to GnuCOBOL
	* general: update of automake/autoconf/bison/flex

2015-07-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: moved additional build-scripts to build_aux,
	  regenerated all Makefiles
	* configure.ac: added AC_CONFIG_AUX_DIR([build_aux])

2015-04-27  Ron Norman <rjn@inglenet.com>

	* Added support for Micro Focus format sequential and relative
	  files. New compiler directive -fmf-files sets all sequential
	  and relative files to match what Micro Focus would create
	  Numerous runtime.cfg settings added for selecting file
	  format.

2015-04-14  Ron Norman

	* cobc.c codegen.c common.h tree.h parser.y reportio.c typeck.c