@@ -1,6 +1,12 @@
 
 2017-04-18 Ron Norman <rjn@inglenet.com>
 
+	* numeric.c,common.c: 
+	 Check for HAVE_ISFINITE and use 'isfinite' istead of 'finite'
+	 'isfinite' is in the C99 standard and on MAC OS 'finite' is deprecated
+
+2017-04-18 Ron Norman <rjn@inglenet.com>
+
 	* fileio.c: relative_read_size returns an 'int' and not 'size_t'
 	* screenio.c: add (int) casts
 	* move.c: use 'int' instead of 'size_t' as it needs to be signed
