@@ -1,4 +1,8 @@
 
+2017-04-18  Ron Norman <rjn@inglenet.com>
+
+	* configure.ac,config.h.in: check for 'isfinite' & set HAVE_ISFINITE
+
 2017-02-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* HACKING: added info how to prepare a distribution
